--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -219,6 +219,236 @@
         "reverse_input_char_index = dict((i, char) for char, i in input_token_idx.items())\n",
         "reverse_target_char_index = dict((i, char) for char, i in target_token_idx.items())\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aLqfVhxah7U6"
+      },
+      "outputs": [],
+      "source": [
+        "# RNN model\n",
+        "\n",
+        "def seq2seq(embedding_size, n_encoder_tokens, n_decoder_tokens, n_encoder_layers,n_decoder_layers, latent_dimension, cell_type,\n",
+        "            target_token_idx, decoder_max_length, reverse_target_char_index,dropout,encoder_input_data, decoder_input_data,\n",
+        "            decoder_target_data,batch_size,epochs):\n",
+        "  \n",
+        "  encoder_inputs = keras.Input(shape=(None,), name='encoder_input')\n",
+        "\n",
+        "  encoder = None\n",
+        "  encoder_outputs = None\n",
+        "  state_h = None\n",
+        "  state_c = None\n",
+        "  e_layer= n_encoder_layers\n",
+        "  \n",
+        "  # RNN\n",
+        "\n",
+        "  if cell_type==\"RNN\":\n",
+        "    embed = tf.keras.layers.Embedding(input_dim=n_encoder_tokens, output_dim=embedding_size,name='encoder_embedding')(encoder_inputs)\n",
+        "    encoder = keras.layers.SimpleRNN(latent_dimension, return_state=True, return_sequences=True,name='encoder_hidden_1', dropout=dropout)\n",
+        "    print(\"Embed done\")\n",
+        "    encoder_outputs, state_h = encoder(embed)\n",
+        "    \n",
+        "    for i in range(2,e_layer+1):\n",
+        "      layer_name = ('encoder_hidden_%d') % i\n",
+        "      print(\"Starting 2nd\")\n",
+        "      encoder = keras.layers.SimpleRNN(latent_dimension, return_state=True, return_sequences=True,name=layer_name, dropout=dropout)\n",
+        "      print(\"Ending 2nd\")\n",
+        "\n",
+        "      encoder_outputs, state_h = encoder(encoder_outputs, initial_state=[state_h])\n",
+        "\n",
+        "    encoder_states = None\n",
+        "    encoder_states = [state_h]\n",
+        "    decoder_inputs = keras.Input(shape=(None,), name='decoder_input')\n",
+        "    embed_dec = tf.keras.layers.Embedding(n_decoder_tokens, embedding_size, name='decoder_embedding')(decoder_inputs)\n",
+        "    \n",
+        "    # number of decoder layers\n",
+        "    d_layer = n_decoder_layers\n",
+        "    decoder = None\n",
+        "    decoder = keras.layers.SimpleRNN(latent_dimension, return_sequences=True, return_state=True,name='decoder_hidden_1', dropout=dropout)\n",
+        "    \n",
+        "    # initial state of decoder is encoder's last state of last layer\n",
+        "    decoder_outputs, _ = decoder(embed_dec, initial_state=encoder_states)\n",
+        "    for i in range(2,d_layer+1):\n",
+        "      layer_name = 'decoder_hidden_%d' % i\n",
+        "      decoder = keras.layers.SimpleRNN(latent_dimension, return_sequences=True, return_state=True,name=layer_name, dropout=dropout)\n",
+        "      decoder_outputs, _ = decoder(decoder_outputs, initial_state=encoder_states)\n",
+        "    \n",
+        "    decoder_dense = keras.layers.Dense(n_decoder_tokens, activation=\"softmax\", name='decoder_output')\n",
+        "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "    model = keras.Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
+        "    \n",
+        "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\",metrics=['accuracy'])                 \n",
+        "\n",
+        "    model.fit(\n",
+        "          [encoder_input_data, decoder_input_data],\n",
+        "          decoder_target_data,\n",
+        "          batch_size=batch_size,\n",
+        "          epochs=epochs,\n",
+        "          callbacks=WandbCallback()\n",
+        "      )\n",
+        "    \n",
+        "    # Inference model\n",
+        "    encoder_inputs = model.input[0]\n",
+        "    encoder_outputs, state_h_enc = model.get_layer('encoder_hidden_' + str(n_encoder_layers)).output\n",
+        "    encoder_states = [state_h_enc]\n",
+        "    encoder_model = keras.Model(encoder_inputs, encoder_states)\n",
+        "\n",
+        "    decoder_inputs = model.input[1] \n",
+        "    decoder_outputs = model.get_layer('decoder_embedding')(decoder_inputs)\n",
+        "    decoder_states_inputs = []\n",
+        "    decoder_states = []\n",
+        "\n",
+        "    for j in range(1, n_decoder_layers + 1):\n",
+        "        decoder_state_input_h = keras.Input(shape=(latent_dimension,))\n",
+        "        current_states_inputs = [decoder_state_input_h]\n",
+        "        decoder = model.get_layer('decoder_hidden_' + str(j))\n",
+        "        decoder_outputs, state_h_dec = decoder(decoder_outputs, initial_state=current_states_inputs)\n",
+        "        decoder_states += [state_h_dec]\n",
+        "        decoder_states_inputs += current_states_inputs\n",
+        "\n",
+        "    decoder_dense = model.get_layer('decoder_output')\n",
+        "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "    decoder_model = keras.Model([decoder_inputs] + decoder_states_inputs, [decoder_outputs] + decoder_states)\n",
+        "    return encoder_model, decoder_model\n",
+        "\n",
+        "  # GRU\n",
+        "\n",
+        "  elif cell_type==\"GRU\":\n",
+        "    embed = tf.keras.layers.Embedding(input_dim=n_encoder_tokens, output_dim=embedding_size,name='encoder_embedding')(encoder_inputs)\n",
+        "    encoder = keras.layers.GRU(latent_dimension, return_state=True, return_sequences=True,name='encoder_hidden_1', dropout=dropout)\n",
+        "    encoder_outputs, state_h = encoder(embed)\n",
+        "    \n",
+        "    for i in range(2,e_layer+1):\n",
+        "      layer_name = ('encoder_hidden_%d') % i\n",
+        "      encoder = keras.layers.GRU(latent_dimension, return_state=True, return_sequences=True,name=layer_name, dropout=dropout)\n",
+        "      encoder_outputs, state_h = encoder(encoder_outputs, initial_state=[state_h])\n",
+        "    \n",
+        "    encoder_states = None\n",
+        "    encoder_states = [state_h]\n",
+        "    decoder_inputs = keras.Input(shape=(None,), name='decoder_input')\n",
+        "    embed_dec = tf.keras.layers.Embedding(n_decoder_tokens, embedding_size, name='decoder_embedding')(decoder_inputs)\n",
+        "    \n",
+        "    # number of decoder layers\n",
+        "    d_layer = n_decoder_layers\n",
+        "    decoder = None\n",
+        "    decoder = keras.layers.GRU(latent_dimension, return_sequences=True, return_state=True,name='decoder_hidden_1', dropout=dropout)\n",
+        "    \n",
+        "    # initial state of decoder is encoder's last state of last layer\n",
+        "    decoder_outputs, _ = decoder(embed_dec, initial_state=encoder_states)\n",
+        "    for i in range(2,d_layer+1):\n",
+        "      layer_name = 'decoder_hidden_%d' % i\n",
+        "      decoder = keras.layers.GRU(latent_dimension, return_sequences=True, return_state=True,name=layer_name, dropout=dropout)\n",
+        "      decoder_outputs, _ = decoder(decoder_outputs, initial_state=encoder_states)\n",
+        "    \n",
+        "    decoder_dense = keras.layers.Dense(n_decoder_tokens, activation=\"softmax\", name='decoder_output')\n",
+        "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "    model = keras.Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
+        "\n",
+        "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\",metrics=['accuracy'])#, metrics=[my_metric]                 \n",
+        "\n",
+        "    model.fit(\n",
+        "          [encoder_input_data, decoder_input_data],\n",
+        "          decoder_target_data,\n",
+        "          batch_size=batch_size,\n",
+        "          epochs=epochs,\n",
+        "          callbacks=WandbCallback()\n",
+        "      )\n",
+        "    \n",
+        "    # Inference Model\n",
+        "    encoder_inputs = model.input[0]\n",
+        "    encoder_outputs, state_h_enc = model.get_layer('encoder_hidden_' + str(n_encoder_layers)).output\n",
+        "    encoder_states = [state_h_enc]\n",
+        "    encoder_model = keras.Model(encoder_inputs, encoder_states)\n",
+        "\n",
+        "    decoder_inputs = model.input[1]\n",
+        "    decoder_outputs = model.get_layer('decoder_embedding')(decoder_inputs)\n",
+        "    decoder_states_inputs = []\n",
+        "    decoder_states = []\n",
+        "\n",
+        "    for j in range(1, n_decoder_layers + 1):\n",
+        "        decoder_state_input_h = keras.Input(shape=(latent_dimension,))\n",
+        "        current_states_inputs = [decoder_state_input_h]\n",
+        "        decoder = model.get_layer('decoder_hidden_' + str(j))\n",
+        "        decoder_outputs, state_h_dec = decoder(decoder_outputs, initial_state=current_states_inputs)\n",
+        "        decoder_states += [state_h_dec]\n",
+        "        decoder_states_inputs += current_states_inputs\n",
+        "    \n",
+        "    decoder_dense = model.get_layer('decoder_output')\n",
+        "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "    decoder_model = keras.Model([decoder_inputs] + decoder_states_inputs, [decoder_outputs] + decoder_states)\n",
+        "    return encoder_model, decoder_model\n",
+        "\n",
+        "  # LSTM\n",
+        "\n",
+        "  elif cell_type==\"LSTM\":\n",
+        "    embed = tf.keras.layers.Embedding(input_dim=n_encoder_tokens, output_dim=embedding_size,name='encoder_embedding')(encoder_inputs)\n",
+        "    encoder = keras.layers.LSTM(latent_dimension, return_state=True, return_sequences=True,name='encoder_hidden_1', dropout=dropout)\n",
+        "    encoder_outputs, state_h, state_c = encoder(embed)\n",
+        "    \n",
+        "    for i in range(2,e_layer+1):\n",
+        "      layer_name = ('encoder_hidden_%d') % i\n",
+        "      encoder = keras.layers.LSTM(latent_dimension, return_state=True, return_sequences=True,name=layer_name, dropout=dropout)\n",
+        "      encoder_outputs, state_h, state_c = encoder(encoder_outputs, initial_state=[state_h,state_c])\n",
+        "    \n",
+        "    encoder_states = None\n",
+        "    encoder_states = [state_h, state_c]\n",
+        "\n",
+        "    decoder_inputs = keras.Input(shape=(None,), name='decoder_input')\n",
+        "    embed_dec = tf.keras.layers.Embedding(n_decoder_tokens, embedding_size, name='decoder_embedding')(decoder_inputs)\n",
+        "    \n",
+        "    # number of decoder layers\n",
+        "    d_layer = n_decoder_layers\n",
+        "    decoder = None\n",
+        "    decoder = keras.layers.LSTM(latent_dimension, return_sequences=True, return_state=True,name='decoder_hidden_1', dropout=dropout)\n",
+        "    \n",
+        "    # initial state of decoder is encoder's last state of last layer\n",
+        "    decoder_outputs, _,_ = decoder(embed_dec, initial_state=encoder_states)\n",
+        "    for i in range(2,d_layer+1):\n",
+        "      layer_name = 'decoder_hidden_%d' % i\n",
+        "      decoder = keras.layers.LSTM(latent_dimension, return_sequences=True, return_state=True,name=layer_name, dropout=dropout)\n",
+        "      decoder_outputs, _,_ = decoder(decoder_outputs, initial_state=encoder_states)\n",
+        "    \n",
+        "    decoder_dense = keras.layers.Dense(n_decoder_tokens, activation=\"softmax\", name='decoder_output')\n",
+        "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "    model = keras.Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
+        "\n",
+        "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\",metrics=['accuracy'])#, metrics=[my_metric]                 \n",
+        "    \n",
+        "    model.fit(\n",
+        "          [encoder_input_data, decoder_input_data],\n",
+        "          decoder_target_data,\n",
+        "          batch_size=batch_size,\n",
+        "          epochs=epochs,\n",
+        "          callbacks=WandbCallback()\n",
+        "      )\n",
+        "    \n",
+        "    encoder_inputs = model.input[0]\n",
+        "    encoder_outputs, state_h_enc, state_c_enc = model.get_layer('encoder_hidden_' + str(n_encoder_layers)).output\n",
+        "    encoder_states = [state_h_enc, state_c_enc]\n",
+        "    encoder_model = keras.Model(encoder_inputs, encoder_states)\n",
+        "\n",
+        "    decoder_inputs = model.input[1]\n",
+        "    decoder_outputs = model.get_layer('decoder_embedding')(decoder_inputs)\n",
+        "    decoder_states_inputs = []\n",
+        "    decoder_states = []\n",
+        "\n",
+        "    for j in range(1,n_decoder_layers + 1):\n",
+        "        decoder_state_input_h = keras.Input(shape=(latent_dimension,))\n",
+        "        decoder_state_input_c = keras.Input(shape=(latent_dimension,))\n",
+        "        current_states_inputs = [decoder_state_input_h, decoder_state_input_c]\n",
+        "        decoder = model.get_layer('decoder_hidden_' + str(j))\n",
+        "        decoder_outputs, state_h_dec, state_c_dec = decoder(decoder_outputs, initial_state=current_states_inputs)\n",
+        "        decoder_states += [state_h_dec, state_c_dec]\n",
+        "        decoder_states_inputs += current_states_inputs\n",
+        "    \n",
+        "    decoder_dense = model.get_layer('decoder_output')\n",
+        "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "    decoder_model = keras.Model([decoder_inputs] + decoder_states_inputs, [decoder_outputs] + decoder_states)\n",
+        "    return encoder_model, decoder_model\n",
+        "      "
+      ]
     }
   ],
   "metadata": {
