--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -865,8 +865,7 @@
       "source": [
         "# Test accuracy\n",
         "\n",
-        "subset = 50\n",
-        "test_accuracy = accuracy(test_encoder_input_data[0:subset], test_target_data[0:subset],n_decoder_layers,encoder_model,decoder_model) if subset>0 \\\n",
+        "test_accuracy = accuracy(test_encoder_input_data, test_target_data,n_decoder_layers,encoder_model,decoder_model) if subset>0 \\\n",
         "    else accuracy(test_encoder_input_data, test_target_data,n_decoder_layers,encoder_model,decoder_model)\n",
         "print('Validation accuracy: ', test_accuracy)"
       ],
